2011-01-24  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.

2011-01-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* NEWS: Update.

	* ChangeLog: Convert to UTF8 encoding.

	* man/ascii-xfr.1: Fix typos, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669098

	* src/rwconf.c: Fix config file parsing bug, Thanks Jan Görig,
	  https://bugzilla.redhat.com/show_bug.cgi?id=669406

2011-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.

2011-01-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/da.po: Update from translation team.

2010-12-12  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/dial.c: For macros, add \g<script> to launch runscript.

	* src/window.c: _attron(): fix bold with inverse mode, do not handle
	  prettiness

	* src/vt100.c: state2(): order list in switch for readability.

2010-10-26  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/ascii-xfr.c: check_answer: Cleanup.
	  Thanks Kjell M. Myksvoll.

	* src/ascii-xfr.c: lineout: change to use explicit length info
	  instead of strlen, makes storing data with included '\0' work.
	  Thanks Kjell M. Myksvoll.

2010-09-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: remove 'break' in ESC[u handling which should
	  not have been there. 

2010-07-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c, src/minicom.c, src/minicom.h: Handle device
	  reconnects more smoothly by reopening a closed device
	  (USB-serial dongles).

2010-06-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: Use local_echo in vt_init.

	* src/dial.c, src/config.c: Rename local variable local_echo to
	  local_echo_str as there's also a global variable local_echo.

2010-05-30  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/updown.c: Check for error conditions on fd of running script.
	  for minicom bug-tracker #312517, by Chris Simmonds
